fixed select buttons and button spacing

--- a/src/final/styles/AddAdmin.module.css
+++ b/src/final/styles/AddAdmin.module.css
@@ -120,3 +120,9 @@ input {
 .role {
     position: relative;
 }
+.signoutbutton, .submit, .exitAdding{
+    margin: 2px;
+}
+.signoutbutton:hover, .submit:hover, .exitAdding:hover{
+    margin: 0px;
+}
