--- a/src/final/styles/ArtifactPreview.module.css
+++ b/src/final/styles/ArtifactPreview.module.css
@@ -19,7 +19,9 @@
 .artifact-description {
     font-size: 1rem;
 }
-
+.submit-button{
+    margin:auto;
+}
 .submit-button:hover {
     background-color: var(--white);
     color: var(--red);
